<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/congrats_bg" >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/HomeFragment9_image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/net_icons" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/imageView1"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:text="@string/HomeFragment9_text1"
          android:textColor="@color/White"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textView1"
          android:layout_centerHorizontal="true"
          android:gravity="center"
          android:text="@string/HomeFragment9_text2"
          android:textColor="@color/White"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tvDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_marginTop="16dp"
          android:layout_toLeftOf="@+id/textView1"
          android:text=""
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_alignTop="@+id/tvDate"
          android:layout_marginRight="42dp"
          android:layout_marginTop="29dp"
          android:text="@string/HomeFragment9_text3" 
          android:textSize="23sp"/>

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView3"
          android:layout_below="@+id/textView3"
          android:layout_marginTop="15dp"
          android:text="@string/HomeFragment9_text4" 
	      android:textSize="19sp"/>

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView4"
          android:layout_below="@+id/textView4"
          android:layout_marginTop="14dp"
          android:text="@string/HomeFragment9_text5"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView5"
          android:layout_below="@+id/textView5"
          android:text="@string/HomeFragment9_text6"
          android:textAppearance="?android:attr/textAppearanceMedium" 
  		  android:textStyle="bold" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView6"
          android:layout_centerVertical="true"
          android:text="@string/HomeFragment9_text7"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textSize="15sp"/>

      <TextView
          android:id="@+id/textView8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/textView7"
          android:layout_below="@+id/textView7"
          android:text="@string/HomeFragment9_text8"
          android:textAppearance="?android:attr/textAppearanceMedium" 
          android:textSize="15sp"/>

      <TextView
          android:id="@+id/textView9"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignRight="@+id/textView8"
          android:layout_below="@+id/textView8"
          android:text="@string/HomeFragment9_text9"
          android:textAppearance="?android:attr/textAppearanceMedium" 
          android:textSize="15sp"/>

</RelativeLayout>