<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29cdfd"
    android:layout_gravity="center" 
    >

	   <TextView
	       android:id="@+id/textView5"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentTop="true"
	       android:layout_centerHorizontal="true"
	       android:layout_marginTop="31dp"
	       android:gravity="top|right"
	       android:text="@string/HomeFragment2_text1"
	       android:textAppearance="?android:attr/textAppearanceLarge"
	       android:textColor="@color/White"
	       android:textSize="21sp"
	       android:textStyle="bold" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView5"
          android:layout_alignRight="@+id/textView5"
          android:layout_below="@+id/textView5"
          android:gravity="top|right"
          android:text="@string/HomeFragment2_text2"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="@color/White"
          android:textSize="21sp" />

      <Button
          android:id="@+id/doesntMattaer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView6"
          android:layout_alignRight="@+id/textView6"
          android:layout_centerVertical="true"
          android:background="@drawable/greenbutton"
          android:height="25sp"
          android:text="@string/HomeFragment2_button1"
          android:textSize="28sp" />

      <Button
          android:id="@+id/otherOperator"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/doesntMattaer"
          android:layout_alignParentBottom="true"
          android:layout_alignRight="@+id/otherCompany"
          android:layout_marginBottom="54dp"
          android:background="@drawable/greenbutton"
          android:height="25sp"
          android:text="@string/HomeFragment2_button3"
          android:textSize="28sp" />

      <Button
          android:id="@+id/otherCompany"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/doesntMattaer"
          android:layout_alignRight="@+id/doesntMattaer"
          android:layout_below="@+id/doesntMattaer"
          android:layout_marginTop="28dp"
          android:background="@drawable/greenbutton"
          android:height="25sp"
          android:text="@string/HomeFragment2_button2"
          android:textSize="28sp" />

</RelativeLayout>