<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#29cdfd"
    android:id="@+id/container"
   
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/main_SmartMonthly" 
    	android:textSize="22sp"
    />

  <Button
        android:id="@+id/Agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/main_Agree"
        android:background="@drawable/button"
        android:textSize="21sp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/UseTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/main_UseTerms" 
        android:textSize="21sp"
        android:onClick="onClick"/>

    

</RelativeLayout>
