<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29cdfd"
    android:layout_gravity="center" 
    >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:gravity="top|right"
        android:text="@string/HomeFragment4_text1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textSize="21sp"
        android:textStyle="bold" />

      <Button
          android:id="@+id/doesntMatter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/callAbroad"
          android:layout_alignParentBottom="true"
          android:layout_alignRight="@+id/callAbroad"
          android:layout_marginBottom="102dp"
          android:background="@drawable/greenbutton"
          android:height="25sp"
          android:text="@string/HomeFragment4_button2"
          android:textSize="28sp" />

      <Button
          android:id="@+id/callAbroad"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_above="@+id/doesntMatter"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="27dp"
          android:background="@drawable/greenbutton"
          android:height="25sp"
          android:text="@string/HomeFragment4_button1"
          android:textSize="28sp" />

</RelativeLayout>