<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29cdfd"
    android:layout_gravity="center" 
    >

    <Button
        android:id="@+id/personalProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/familyProgram"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/familyProgram"
        android:layout_marginBottom="100dp"
        android:background="@drawable/greenbutton"
        android:height="25sp"
        android:text="@string/HomeFragment3_button2"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/familyProgram"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:gravity="top|right"
        android:text="@string/HomeFragment3_text1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/familyProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/personalProgram"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/greenbutton"
        android:height="25sp"
        android:text="@string/HomeFragment3_button1"
        android:textSize="28sp" />

</RelativeLayout>